try to fix vh problem on mobile

--- a/style.css
+++ b/style.css
@@ -39,10 +39,7 @@ html, body {
 body {
     background-image: url('../portfolio_axel/assets/images/background.jpg');
     color: #ffffff;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    min-height: 100vh;
+    min-height: 100dvh;
     height: 100dvh;
 }
 
